- TG frontend: basic TG bot connection frontend service - APP: finished all basic gRPC methods with DB queries - DB: default values for table columns
